site-header resolving issue where mobile search box was inaccessible, adding background-color to site title to parent unit name section on mobile

--- a/src/components/ecosystem-home-hero/_ecosystem-home-hero.scss
+++ b/src/components/ecosystem-home-hero/_ecosystem-home-hero.scss
@@ -27,7 +27,7 @@
     }
     @include media-breakpoint-up(lg) {
       padding-bottom: rem(84);
-      margin-right: rem(190);
+      margin-right: 0;
     }
   }
 
